@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190306"
-#define public MagickPackageReleaseDate "snapshot-20190306"
+#define public MagickPackageVersionAddendum ".020190307"
+#define public MagickPackageReleaseDate "snapshot-20190307"
